5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1644_869.log
== TEST (2019-04-15 23:20:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))

if (preco_inicial >=200):
	preco_final = round(((preco_inicial/100)*5), 2)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:21:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))

if (preco_inicial >=200):
	preco_final = round(((preco_inicial/100)*5), 2)
	
print(preco_final)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:24:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco final = preco_inicial - porcentagem
else:
	preco_final = preco inicial
	
print(preco_final)
-- ERROR:
File "XXXX", line 10
    preco final = preco_inicial - porcentagem
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:25:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco final = (preco_inicial - porcentagem)
else:
	preco_final = preco inicial
	
print(preco_final)
-- ERROR:
File "XXXX", line 10
    preco final = (preco_inicial - porcentagem)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:25:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco inicial
	
print(preco_final)
-- ERROR:
File "XXXX", line 12
    preco_final = preco inicial
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:26:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print(preco_final)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print (round(preco_final, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print (round(preco_final, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:29:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print (round(preco_final, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:29:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print (round(preco_final, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco_inicial = float(input("Digite o preco: "))
porcentagem = ((preco_inicial/100)*5)


if (preco_inicial >=200):
	preco_final = preco_inicial - porcentagem
else:
	preco_final = preco_inicial
	
print (round(preco_final, 2))
-- EXECUTION TIME:
0.221634
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
